change validator for booking dates